# jspace-refusal

./: .gitignore  NOTICE  README.md  RESEARCH.md  pyproject.toml
jrefusal/: __init__.py  benchmark.py  data.py  decompose.py  generate.py  intervene.py  jailbreak.py  model.py  preserve.py  refusal.py
paper/: dissociation_card.typ  refusal_workspace.typ  social_card.typ
results/: benchmark_strength1.json  decompose.json  monitor.json  monitor_control.json  nullspace.json  perception.json  rank_sweep.json  steer.json  tradeoff.json
scripts/: 00_probe_refusal.py  01_ablation_smoke.py  02_benchmark.py  03_tradeoff.py  04_rank_sweep.py  05_decompose.py  06_monitor.py  07_nullspace.py  08_monitor_control.py  09_perception.py  10_steer.py
tests/: test_jrefusal.py
